feat:レスポンシブ対応

--- a/app/static/css/contents.css
+++ b/app/static/css/contents.css
@@ -27,9 +27,27 @@ figure figcaption {
 }
 
 .scroll {
-  height: 700px;
+  height: 100vh;
   overflow: auto;
   overflow-y: scroll;
+}
+
+
+
+@media screen and (min-width: 980px) {
+  .message-scroll {
+    height: 100vh;
+    overflow: auto;
+    overflow-y: scroll;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .message-scroll {
+    height: 300px;
+    overflow: auto;
+    overflow-y: scroll;
+  }
 }
 
 .user-name {
@@ -40,4 +58,16 @@ figure figcaption {
 .user-name:hover {
   color: #333;
   text-decoration: none;
+}
+
+@media screen and (max-width: 973px) {
+  .user-search {
+    display: none
+  }
+}
+
+@media screen and (max-width: 973px) {
+  .side-bar-content {
+    display: none
+  }
 }
