--- a/app/templates/home/comment_of_article.html
+++ b/app/templates/home/comment_of_article.html
@@ -338,7 +338,7 @@
         <!-- リツイート数とライク数 -->
         <div class="card-body border">
             <div class="row h-25">
-                <div class="col-md-6 text-center on-implementing">
+                <div class="col-6 text-center on-implementing">
                     <a href="#" class="link-black">3 retweets</a>
                 </div>
                 {% if article_info.article.favorite_article.all %}
@@ -359,10 +359,10 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-md-4 text-center">
+                <div class="col-4 text-center">
                     <span class="text-lg on-implementing" style="cursor: pointer;"><i class="fas fa-retweet"></i></span>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-4 text-center">
                     {% if article_info.is_login_user_like %}
                     <span class="text-lg already-like" style="cursor: pointer;">
                         <span class="far fa-thumbs-up" style="color:indianred"></span>
@@ -381,7 +381,7 @@
                     <span id="id_like_count_{{article_info.article.id}}"></span>
                     {% endif %}
                 </div>
-                <div class="col-md-4 text-center" style="cursor: pointer;">
+                <div class="col-4 text-center" style="cursor: pointer;">
                     <span class="text-lg">
                         <i class="far fa-comments" id="id_comment"></i>
                         {% if article_info.article.comment.all %}
