feat:アカウント情報変更機能実装

--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -73,20 +73,13 @@
             <!-- /.col -->
           </div>
         </form>
-        <div class="social-auth-links text-center mb-3">
-          <br />
+        <div class="social-auth-links text-center mb-3 mt-3">
           <a href="#" class="btn btn-block btn-outline-primary on-implementing">
-            <i class="fab fa-facebook mr-2"></i>Facebookアカウントでログイン
-          </a>
-          <a href="#" class="btn btn-block btn-outline-danger on-implementing">
             <i class="fab fa-google-plus mr-2"></i>Googleアカウントでログイン
           </a>
         </div>
         <!-- /.social-auth-links -->
 
-        <p class="mb-1">
-          <a class="on-implementing" href="#">パスワードを忘れた場合</a>
-        </p>
         <p class="mb-0">
           <a href="{% url 'account:signup' %}" class="text-center">アカウントを作成</a>
         </p>
