--- a/app/templates/message/message.html
+++ b/app/templates/message/message.html
@@ -47,7 +47,6 @@
 	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 		<ul class="navbar-nav mr-auto">
 		</ul>
-		<a class="nav-link text-dark" href="{% url 'account:login' %}" tabindex="-1" aria-disabled="true">ログイン</a>
 		<a class="nav-link text-dark" href="{% url 'account:logout' %}" tabindex="-1" aria-disabled="true">ログアウト</a>
 	</nav>
 	<div class="container-fluid" style="min-height: 100vh;">
@@ -62,7 +61,7 @@
 					<a class="nav-link active" id="v-pills-messages-tab" href="{% url 'messages:talkroom' %}" role="tab"
 						aria-controls="v-pills-messages" aria-selected="false">
 						<i class="fa fa-envelope text-lg mr-3"></i><span class="side-bar-content">Message</span></a>
-					<a class="nav-link on-implementing" id="v-pills-settings-tab">
+					<a class="nav-link" id="v-pills-settings-tab" href="{% url 'account:settings' %}">
 						<i class="fa fa-cog text-lg mr-3"></i><span class="side-bar-content">Setting</span></a>
 				</div>
 			</div>
