--- a/app/templates/relation/base_relation.html
+++ b/app/templates/relation/base_relation.html
@@ -124,7 +124,7 @@
                     <a class="nav-link" id="v-pills-messages-tab" href="{% url 'messages:talkroom' %}" role="tab"
                         aria-controls="v-pills-messages" aria-selected="false">
                         <i class="fa fa-envelope text-lg mr-3"></i><span class="side-bar-content">Message</span></a>
-                    <a class="nav-link on-implementing" id="v-pills-settings-tab">
+                    <a class="nav-link" id="v-pills-settings-tab" href="{% url 'account:settings' %}">
                         <i class="fa fa-cog text-lg mr-3"></i><span class="side-bar-content">Setting</span></a>
                 </div>
             </div>
