feat:パスワード変更機能実装途中

--- a/app/templates/account/password_change.html
+++ b/app/templates/account/password_change.html
@@ -52,31 +52,29 @@
                             <div class="col-5 col-sm-3">
                                 <div class="nav flex-column nav-tabs h-100" id="vert-tabs-tab" role="tablist"
                                     aria-orientation="vertical">
-                                    <a class="nav-link active" id="vert-tabs-account-tab"
+                                    <a class="nav-link" id="vert-tabs-account-tab"
                                         href="{% url 'account:settings' user.id %}" role="tab"
-                                        aria-controls="vert-tabs-account" aria-selected="true">アカウントを編集</a>
-                                    <a class="nav-link" id="vert-tabs-password-tab"
+                                        aria-controls="vert-tabs-account" aria-selected="false">アカウントを編集</a>
+                                    <a class="nav-link active" id="vert-tabs-password-tab"
                                         href="{% url 'account:password_change' %}" role="tab"
-                                        aria-controls="vert-tabs-profile" aria-selected="false">パスワードを変更</a>
+                                        aria-controls="vert-tabs-profile" aria-selected="true">パスワードを変更</a>
                                 </div>
                             </div>
                             <div class="col-7 col-sm-9">
                                 <div class="tab-content" id="vert-tabs-tabContent">
-                                    <div class="tab-pane text-left fade show active" role="tabpanel"
-                                        aria-labelledby="vert-tabs-account-tab">
-                                        <form action="{% url 'account:settings' user.id %}" method="POST">
+                                    <div class="tab-pane fade text-left fade show active" role="tabpanel"
+                                        aria-labelledby="vert-tabs-password-tab">
+                                        <form action="{% url 'account:password_change' %}" method="POST">
                                             {% csrf_token %}
                                             {% for field in form %}
                                             <div class="form-group">
-                                                <label for="inputEmail">{{field.label}}</label>
+                                                <label for="inputCurrentPassword">{{field.label}}</label>
                                                 {% if field.errors %}
                                                 <span class="errormessage" style="color: crimson; margin-left: 10px;">
                                                     {{field.errors.0}}
                                                 </span>
                                                 {% endif %}
-                                                <div>
-                                                    {{field}}
-                                                </div>
+                                                {{ field }}
                                             </div>
                                             {% endfor %}
                                             <button type="submit" class="btn btn-primary float-right">送信</button>
