--- a/app/templates/profile/base_profile.html
+++ b/app/templates/profile/base_profile.html
@@ -231,7 +231,7 @@
                     <a class="nav-link" id="v-pills-messages-tab" href="{% url 'messages:talkroom' %}" role="tab"
                         aria-controls="v-pills-messages" aria-selected="false">
                         <i class="fa fa-envelope text-lg mr-3"></i><span class="side-bar-content">Message</span></a>
-                    <a class="nav-link" id="v-pills-settings-tab" href="{% url 'account:settings' %}">
+                    <a class="nav-link" id="v-pills-settings-tab" href="{% url 'account:settings' user.id %}">
                         <i class="fa fa-cog text-lg mr-3"></i><span class="side-bar-content">Setting</span></a>
                 </div>
             </div>
